Table and Cards

--- a/aboutus.html
+++ b/aboutus.html
@@ -107,7 +107,7 @@
             </div>
         </div>
 
-
+     <div class="container">
         <div class="row">
             <div class="col-12">
                 <h2>Corporate Leadership</h2>
@@ -121,6 +121,7 @@
                 <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
             </div>
        </div>
+    
        <!-- We will add a new row of content after the Corporate Leadership row in the page. -->
        <div class="row row-content">
             <div class="col-12 col-sm-9">
@@ -168,7 +169,7 @@
                     </table>
                 </div>
             </div>
-             
+        </div>  
             </div>
        </div> 
     </div>
