--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@ adding column classes to the inner divs-->
             <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/img/uthappizza.png" alt="Uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza</h2>
+                        <!-- In this short exercise we will examine the use of badges as a way of alerting users. 
+                            At the end of this exercise, you will be able to:
+                            Add a badge to your web page using the Bootstrap badge class -->
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
                         <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
                             Italian pizza, topped with Cerignola olives, ripe vine
                             cherry tomatoes, Vidalia onion, Guntur chillies and
