--- a/index.html
+++ b/index.html
@@ -54,14 +54,17 @@ adding column classes to the inner divs-->
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm-6">
+                <div class="col-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <!-- We will now add the restaurant logo to the Jumbotron. In index.html go to the header row inside the jumbotron and
  replace the second <div> column with the following code: -->
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-3 col-sm align-self-center">
                     <img src="img/img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-3">
+                    <button type="button" class="btn btn-warning btn-lg btn-block mt-5">Reserve Table</button>
                 </div>
             </div>
         </div>
