--- a/index.html
+++ b/index.html
@@ -133,8 +133,6 @@ adding column classes to the inner divs-->
                 <!-- Next, we will go to the third row and replace the contents of the second column 
         containing the description about Alberto with the following content: -->
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png"
-                        alt="Alberto Somayya">
                     <div class="media-body">
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
@@ -144,6 +142,8 @@ adding column classes to the inner divs-->
                             creating mouthwatering Indo-Italian fusion experiences.
                         </p>
                     </div>
+                    <img class="mr-3" src="img/alberto.png"
+                    alt="Alberto Somayya">
                 </div>
             </div>
         </div>
