--- a/index.html
+++ b/index.html
@@ -387,6 +387,17 @@ Bootstrap social Icons are in the social section-->
                         <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                             <span class="carousel-control-next-icon"></span>
                         </a>
+                        <!-- Adding the Carousel Control Buttons Pause and Play w/Font awesome symbols on the buttons
+                        We are adding the two buttons inside a button group with the ID carouselButtons. The two buttons contain the pause 
+                        and play glyphicons to indicate their corresponding actions. -->
+                        <div class="btn-group" id="carouselButton">
+                            <button class="btn btn-danger btn-sm" id="carousel-pause">
+                                <span class="fa fa-pause"></span>
+                            </button>
+                            <button class="btn btn-danger btn-sm" id="carousel-play">
+                                <span class="fa fa-play"></span>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -620,10 +631,17 @@ Bootstrap social Icons are in the social section-->
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <!-- The tooltip needs to be activated by adding a small Javascript code to the bottom of the page as follows: -->
+        <!-- add the following JavaScript code to activate
+             the pause and play buttons on carousel: -->
         <script>
-            $(document).ready(function () {
-                $('[data-toggle="tooltip"]').tooltip();
+            $(document).ready(function(){
+                $("#mycarousel").carousel( { interval: 2000 } );
+                $("#carousel-pause").click(function(){
+                    $("#mycarousel").carousel('pause');
+                });
+                $("#carousel-play").click(function(){
+                    $("#mycarousel").carousel('cycle');
+                });
             });
         </script>
 
