--- a/index.html
+++ b/index.html
@@ -390,14 +390,12 @@ Bootstrap social Icons are in the social section-->
                         <!-- Adding the Carousel Control Buttons Pause and Play w/Font awesome symbols on the buttons
                         We are adding the two buttons inside a button group with the ID carouselButtons. The two buttons contain the pause 
                         and play glyphicons to indicate their corresponding actions. -->
-                        <div class="btn-group" id="carouselButton">
-                            <button class="btn btn-danger btn-sm" id="carousel-pause">
-                                <span class="fa fa-pause"></span>
-                            </button>
-                            <button class="btn btn-danger btn-sm" id="carousel-play">
-                                <span class="fa fa-play"></span>
-                            </button>
-                        </div>
+                        <!-- Modifying 2 buttons to one button to control the carousel-adding a single button inside a button group with 
+                            the ID carousel-button. The buttons will show either as a pause or play button based on the current behavior of the carousel.-->
+                        
+                            <button class="btn btn-danger btn-sm" id="carousel-button">
+                                <span id="carousel-button-icon" class="fa fa-pause"></span>
+                             </button>
                     </div>
                 </div>
             </div>
@@ -634,14 +632,18 @@ Bootstrap social Icons are in the social section-->
         <!-- add the following JavaScript code to activate
              the pause and play buttons on carousel: -->
         <script>
-            $(document).ready(function(){
-                $("#mycarousel").carousel( { interval: 2000 } );
-                $("#carousel-pause").click(function(){
+            $("#carousel-button").click(function(){
+                if ($("#carousel-button").children("span").hasClass('fa-pause')) 
+                    {
                     $("#mycarousel").carousel('pause');
-                });
-                $("#carousel-play").click(function(){
+                    $("#carousel-button").children("span").removeClass('fa-pause');
+                    $("#carousel-button").children("span").addClass('fa-play');
+                }
+                else if ($("#carousel-button").children("span").hasClass('fa-play')){
                     $("#mycarousel").carousel('cycle');
-                });
+                    $("#carousel-button").children("span").removeClass('fa-play');
+                    $("#carousel-button").children("span").addClass('fa-pause'); 
+    }
             });
         </script>
 
