--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Bootstrap social Icons are in the social section-->
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
 
-
+ <!-- build:css css/main.css -->
     <!-- Bootstrap CSS -->
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
@@ -45,6 +45,8 @@ Bootstrap social Icons are in the social section-->
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="css/bootstrap-social.css">
+   
+    <!-- endbuild -->
 
     <title>Ristorante Con Fusion</title>
 
@@ -621,7 +623,7 @@ Bootstrap social Icons are in the social section-->
         </footer>
 
 
-
+    <!-- build:js js/main.js -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
 
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
@@ -629,23 +631,10 @@ Bootstrap social Icons are in the social section-->
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <!-- add the following JavaScript code to activate
-             the pause and play buttons on carousel: -->
-        <script>
-            $("#carousel-button").click(function(){
-                if ($("#carousel-button").children("span").hasClass('fa-pause')) 
-                    {
-                    $("#mycarousel").carousel('pause');
-                    $("#carousel-button").children("span").removeClass('fa-pause');
-                    $("#carousel-button").children("span").addClass('fa-play');
-                }
-                else if ($("#carousel-button").children("span").hasClass('fa-play')){
-                    $("#mycarousel").carousel('cycle');
-                    $("#carousel-button").children("span").removeClass('fa-play');
-                    $("#carousel-button").children("span").addClass('fa-pause'); 
-    }
-            });
-        </script>
+
+        <!-- Moving JS to Script file for task runners Grunt and Gulp -->
+        <script src="js/scripts.js"></script>
+    <!-- endbuild --> 
 
 </body>
 
